--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -519,8 +519,8 @@
    "source": [
     "My insights:\n",
     "\n",
-    "1. There are more than two names for the same value in the columns of 'ST'and 'GENDER'. This has to be fixed.\n",
-    "2. Each number of 'Total Claim Amoun' could be rounded off to two decimal place."
+    "1. There are more than two names for the same value in the columns 'ST'and 'GENDER'. This has to be fixed.\n",
+    "2. Each number of 'Total Claim Amount' could be rounded off to two decimal places."
    ]
   },
   {
@@ -776,12 +776,12 @@
    "id": "6bf59932",
    "metadata": {},
    "source": [
-    "Conslusions:\n",
-    "1. In the category of 'ST', 'Oregon' seems to have the majority, but, in fact, 'California' and 'Cali', both of which are identical, account for the great majority.\n",
-    "2. In the category of 'GENDER', at first, 'Femel' is mistyped. 'F','female'and 'femel' are all the same values, while 'M' and 'Male' are identical. These data can be labelled as M and F, or male and female. \n",
-    "3. In the category of 'Education', 'Bachelor' and 'Bachelors' are the same, and they account for the greatest share of 'Education \n",
-    "4. In the category of 'Number of Open Complaints', '1/0/00' accounts for the majority, but the data of this category has to changed into the data of cumerical columns.\n",
-    "5. In the category of 'Vehicle Class', its majority is 'Four-Door Car'(576), while the minority is 'Luxury car'(14). "
+    "Conclusions:\n",
+    "1. In the category 'ST', 'Oregon' seems to have the majority of values, but, in fact, 'California' and 'Cali', which are identical, account for the great majority.\n",
+    "2. In the category 'GENDER', at first, 'Femel' is mistyped. 'F','female'and 'femel' are all the same values, while 'M' and 'Male' are identical. These data can be labelled as 'M' and 'F', or 'male' and 'female'. \n",
+    "3. In the category of 'Education', 'Bachelor' and 'Bachelors' are the same, and they account for the greatest share of 'Education'. \n",
+    "4. In the category of 'Number of Open Complaints', '1/0/00' accounts for the majority, but the data of this category has to be changed into the data of cumerical columns.\n",
+    "5. In the category 'Vehicle Class', the majority is 'Four-Door Car'(576), while the minority is 'Luxury car'(14). "
    ]
   },
   {
